// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"default","className":"css-0","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.color - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.color","size":25,"title":"AiOutlineRocket","className":"css-0","color":"#9c27b0","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.disableLoadingIcon: true - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.disableLoadingIcon: true","title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.icon - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.icon","title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.rotate: 90 - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.rotate: 90","size":30,"title":"AiOutlineRocket","className":"css-0","rotate":90,"type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.size: 30 - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.size: 30","size":30,"title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.spin: true - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.spin: true","size":30,"title":"AiOutlineRocket","className":"css-0 css-1d1kexc","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render properties.style: border: 1px solid red - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.style: border: 1px solid red","title":"AiOutlineRocket","className":"css-5flvn9","type":"Icon","value":null,"required":false}
  </svg>
</span>
`;

exports[`Render required = true default - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"default","className":"css-0","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.color - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.color","size":25,"title":"AiOutlineRocket","className":"css-0","color":"#9c27b0","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.disableLoadingIcon: true - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.disableLoadingIcon: true","title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.icon - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.icon","title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.rotate: 90 - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.rotate: 90","size":30,"title":"AiOutlineRocket","className":"css-0","rotate":90,"type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.size: 30 - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.size: 30","size":30,"title":"AiOutlineRocket","className":"css-0","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.spin: true - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.spin: true","size":30,"title":"AiOutlineRocket","className":"css-0 css-1d1kexc","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Render required = true properties.style: border: 1px solid red - value[0] 1`] = `
<span
  class="anticon"
  role="img"
>
  <svg
    data-testid="AiOutlineExclamationCircle"
  >
    {"id":"properties.style: border: 1px solid red","title":"AiOutlineRocket","className":"css-5flvn9","type":"Icon","value":null,"required":true}
  </svg>
</span>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.color 1`] = `true`;

exports[`Test Schema properties.color 2`] = `null`;

exports[`Test Schema properties.disableLoadingIcon: true 1`] = `true`;

exports[`Test Schema properties.disableLoadingIcon: true 2`] = `null`;

exports[`Test Schema properties.icon 1`] = `true`;

exports[`Test Schema properties.icon 2`] = `null`;

exports[`Test Schema properties.rotate: 90 1`] = `true`;

exports[`Test Schema properties.rotate: 90 2`] = `null`;

exports[`Test Schema properties.size: 30 1`] = `true`;

exports[`Test Schema properties.size: 30 2`] = `null`;

exports[`Test Schema properties.spin: true 1`] = `true`;

exports[`Test Schema properties.spin: true 2`] = `null`;

exports[`Test Schema properties.style: border: 1px solid red 1`] = `true`;

exports[`Test Schema properties.style: border: 1px solid red 2`] = `null`;
